...
        app:hoveredFocusedTranslationZ="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/uiBtnEdit"
        android:layout_width="168dp"
        android:layout_height="57dp"
        android:layout_marginTop="64dp"
        android:onClick="clickItem_Edit"
        android:text="EDIT RESTAURANT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiChipGroup" />

    <TextView
        android:id="@+id/uiTxtTitleLabel"
...
